# rust-cp

./: Cargo.toml  README.md  lib.rs  makefile.sh  run.sh  snippet.sh  test  test.cpp
src/: basic.rs  main.rs
src/atcoder/abc165/: f.in2  f.in3  f.rs
src/atcoder/abc324/: f.in4  f.out4  f.rs
src/atcoder/abc347/: f.rs
src/atcoder/abc350/: f.ans1  f.rs
src/atcoder/abc354/: f.ans1  f.out1  f.rs
src/atcoder/abc355/: f.rs
src/atcoder/abc363/: e.in1  e.rs  f.rs
src/atcoder/abc369/: e.rs
src/atcoder/abc370/: e.rs
src/atcoder/abc373/: a.rs
src/atcoder/abc375/: f.ans3  f.in1  f.in3  f.rs
src/atcoder/abc378/: e.rs  f.rs
src/atcoder/abc387/: f.rs
src/atcoder/abc389/: e.rs  f.rs
src/atcoder/abc390/: a.rs  b.rs  c.rs  d.rs  e.rs  f  f.rs  f__Generator  f__Generator.cpp  f__Good  f__Good.cpp
src/atcoder/abc392/: d.rs  e.out2  e.rs
src/atcoder/abc393/: a.rs  b.rs  c.rs  d.in7  d.in8  d.rs  e.rs  f.in3  f.rs
src/atcoder/abc394/: a.rs  b.rs  c.ans1  c.rs  d.rs  e.out1  e.rs  g.rs
src/atcoder/abc395/: a.rs  b.rs  c.rs  d.out1  d.rs  e.rs
src/atcoder/abc396/: a.rs  b.rs  c.rs  d.rs  e.in4  e.rs
src/atcoder/abc397/: a.rs  b.in2  b.rs  c.rs  d.rs
src/atcoder/abc398/: a.rs  b.rs  c  c.cpp  c.cpp__tests  c.in3  c.in4  c.rs  d.rs  f.rs
src/cf/1675/: c.rs
src/cf/1950/: e.rs
src/cf/1955/: e.rs
src/cf/1966/: c.rs
src/cf/1968/: g1.rs
src/cf/1970/: a.rs  c.rs
src/cf/2057/: e.rs
src/cf/2060/: e.rs  f.ans3  f.in1  f.in2  f.out2  f.out3  f.rs
src/cf/2062/: d.rs  e.rs
src/cf/2063/: a.rs  b.in2  b.rs  c.in1  c.rs
src/cf/2072/: a.rs  b.rs  c.ans1  c.out1  c.rs  d.ans1  d.out1  d.rs  e.ans1  e.out2  e.rs  f.rs
src/cf/2074/: a.rs  b.rs  c.out1  c.rs  d.out1  d.rs  e.rs
src/cf/2085/: a.rs  d.rs
src/cf/2091/: a.rs  b.rs  c.out1  c.rs  d.rs  e  e.ans2  e.cpp  e.cpp__tests  e.in2  e.rs  f  f.cpp  f.in2  f.in3  f.rs
src/cf/509404/: a.rs
src/mylib/: binomial_coefficient.rs  euler_tour.rs  fenwick_tree.rs  gcd.rs  lca.rs  lib.rs  modint.rs  segtree.rs  sum_lazy_seg_tree.rs  test_bino_modint.rs  union_find.rs
src/polygon/contest_problem_collab_gdsc/: balls.ans2  balls.in1  balls.in2  balls.out1  balls.out2  balls.rs  context_switch_sort.in1  context_switch_sort.out1  context_switch_sort.rs  gdsc_bkac.ans1  gdsc_bkac.in1  gdsc_bkac.rs  largest_sum_rectangle.in2  largest_sum_rectangle.in3  largest_sum_rectangle.rs  largest_sum_rectangle_brute.in1  largest_sum_rectangle_brute.rs  product_10.in1  product_10.in2  product_10.in3  product_10.rs  refine_graph.in1  refine_graph.out1  refine_graph.rs
src/vnoj/: gss.rs
src/vnoj/bedao_r21/: a.in1  a.in2  a.in4  a.rs  b.in1  b.in2  b.rs  c.in1  c.rs  d.rs
src/vnoj/problem/: vosplay.rs
