[package]
name = "rustcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vnoj"
path = "src/vnoj/gss.rs"

[dependencies]
cargo-snippet = "0.6.5"
proconio = "0.4.5"

[[bin]]
name="abc387_f"
path="./src/atcoder/abc387/f.rs"

[[bin]]
name="abc363_e"
path="./src/atcoder/abc363/e.rs"

[[bin]]
name="abc363_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc363/f.rs"


[[bin]]
name="abc378_e"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc378/e.rs"


[[bin]]
name="abc378_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc378/f.rs"


