[package]
name = "rustcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "modint"
path = "src/mylib/lib.rs"

[[bin]]
name = "vnoj"
path = "src/vnoj/gss.rs"

[dependencies]
cargo-snippet = "0.6.5"
proconio = "0.4.5"

[[bin]]
name="abc387_f"
path="./src/atcoder/abc387/f.rs"

[[bin]]
name="abc363_e"
path="./src/atcoder/abc363/e.rs"

[[bin]]
name="abc363_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc363/f.rs"


[[bin]]
name="abc378_e"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc378/e.rs"


[[bin]]
name="abc378_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc378/f.rs"


[[bin]]
name="abc375_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc375/f.rs"


[[bin]]
name="abc355_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc355/f.rs"


[[bin]]
name="abc370_e"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc370/e.rs"


[[bin]]
name="abc373_a"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc373/a.rs"


[[bin]]
name="2060_e"
path="/Users/distiled/codeStuff/rust/rustcp/src/cf/2060/e.rs"


[[bin]]
name="2060_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/cf/2060/f.rs"


[[bin]]
name="2063_a"
path="/Users/distiled/codeStuff/rust/rustcp/src/cf/2063/a.rs"


[[bin]]
name="2063_b"
path="/Users/distiled/codeStuff/rust/rustcp/src/cf/2063/b.rs"


[[bin]]
name="2063_c"
path="/Users/distiled/codeStuff/rust/rustcp/src/cf/2063/c.rs"


[[bin]]
name="2063_d"
path="/Users/distiled/codeStuff/rust/rustcp/src/cf/2063/d.rs"


[[bin]]
name="abc389_f"
path="/Users/distiled/codeStuff/rust/rustcp/src/atcoder/abc389/f.rs"


